# chatbot-arena

./: .gitignore  README.md  environment-settings.toml  main.py  pyproject.toml  refactored.py  requirements.txt
src/: abdml.py  optuning.py  preprocessing.py  relativepath.py  settings.py
src/solvers/: __init__.py  lgbm.py  logistic_regression.py  textcnn.py
tests/: test_optuning.py
