[project]
name = "chatbot-arena"
version = "0.1.0"
description = "Default template for PDM package"
authors = [{ name = "Cylix Lee", email = "cylix.lee@outlook.com" }]
dependencies = [
    "numpy>=1.26.4",
    "polars>=1.17.1",
    "pandas>=2.2.3",
    "sklearn>=0.0.post12",
    "optuna>=4.1.0",
    "tqdm>=4.67.1",
    "category-encoders>=2.6.4",
    "scipy>=1.14.1",
    "nltk>=3.9.1",
    "lightgbm>=4.5.0",
    "catboost>=1.2.7",
    "xgboost>=2.1.3",
    "lifelines>=0.30.0",
    "pytorch-tabnet>=4.1.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = { text = "GPLv3" }


[tool.pdm]
distribution = false
