[project]
name = "chatbot-arena"
version = "0.1.0"
description = "Coursework of Advanced Machine Learning, towards the WSDM Cup - Multilingual Chatbot Arena competition on Kaggle."
authors = [
    { name = "Cylix Lee", email = "cylix.lee@outlook.com" },
    { name = "Steven He", email = "3298124258@qq.com"},
    { name = "Hui Zhang", email = "2154695037@qq.com"},
]
dependencies = [
    "numpy>=1.26.4",
    "pandas[feather,parquet]>=2.2.3",
    "optuna>=4.1.0",
    "tqdm>=4.67.1",
    "nltk>=3.9.1",
    "lightgbm>=4.5.0",
    "catboost>=1.2.7",
    "xgboost>=2.1.3",
    "lifelines>=0.30.0",
    "pytorch-tabnet>=4.1.0",
    "scikit-learn>=1.6.0",
    "toml>=0.10.2",
]
requires-python = ">=3.10"
readme = "README.md"
license = { text = "GPLv3" }


[tool.pdm]
distribution = false
